Start working on filling helping page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -177,7 +177,7 @@ All night obscene pictures were posted in the chat, but they did not fill out th
 Again, everyone forgot about the digest. Nothing here 😓
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
-bot.command.digest.link=➡️
+bot.command.digest.link=→️
 bot.command.greeting=\
 *Bot greetings in chat*\n\n\
 Status: %s.
