--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -177,7 +177,7 @@ bot.command.digest.empty=\
 Опять все забыли про дайджест. Ничего тут нет 😓
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
-bot.command.digest.link=➡️
+bot.command.digest.link=→️
 bot.command.greeting=\
 *Приветствия бота в группе*\n\n\
 Статус: %s.
@@ -368,7 +368,55 @@ site.login.error=Неправильные данные пользователя!
 site.help.title=Справка по сервису и командам Telegram-бота
 site.help.title.commands=Команды бота, доступные каждому участнику группы
 site.help.command.digest=\
-— Отобразить сообщения с тегом <em>#digest</em>, которые были собраны в текущем чате за всё время.
+— Показать сообщения с тегом <strong class="help-command">#digest</strong>, которые были собраны в текущем \
+Telegram-чате за неделю или за всё время.
+site.help.command.digest.alt=Команда /digest, результат выполнения.
+site.help.command.digest.desc=\
+Сообщения, добавленные последними, находятся вверху. В верхней части дайджеста имеется небольшая статистика, \
+отображающая общее количество дайджестов в чате, текущую страницу и их количество. \
+Кнопки, преключающие страницы, отображаются лишь тогда, когда было собрано более 10 сообщений.<br/><br/>\
+Для текста, который помещается в вывод команды, имеются следующие ограничения:<br/>\
+1. Все переводы строк из сообщения вырезаются.<br/>\
+2. Из упоминаний пользовтелей вырезается символ обращения <strong class="help-command">@</strong>, при этом он сохраняется в самой базе данных.<br/>\
+3. Длина сообщения не может превышать 400 символов.<br/><br/>\
+Эксклюзивные возможности для Telegram-чата MotoFan.Ru:<br/>\
+1. Сообщения хранятся всё время, а не только неделю.<br/>\
+2. Сообщения сразу после их добавления в дайджест публикуются на этот сайт.<br/>\
+3. Стрелочка <strong class="help-command">→️</strong> после текста дайджеста позволяет \
+найти и перейти на данное сообщение в чате. Стелочка активна лишь для дайджестов, добавленных после 28-Mar-2020, \
+это связано с переездом бота на новую платформу.
+site.help.command.rate=\
+— Показать актуальные котировки валют и драгоценных металов различных национальных банков.
+site.help.command.rate.alt=Команда /rate, результат выполнения.
+site.help.command.rate.desc=\
+Котировки обновляются каждый день, разница рассчитывается на основе предыдущего значения. \
+Для собственных нужд можно использовать \
+<a href="/api/rate" title="Котировки валют и металлов." target="_blank">специальное API</a>, \
+выводящее котировки в удобном формате JSON.<br/><br/>\
+В качестве офциальных источников используются следующие национальные банки:<br/>\
+1. Банк России (ЦБ РФ), используется для определения курса рубля и драгоценных металлов.<br/>\
+2. Национальный банк Украины (НБУ), используется для определения курса гривны.<br/>\
+3. Национальный банк Республики Беларусь (НБ РБ), используется для определения курса белорусского рубля.<br/>\
+4. Национальный банк Казахстана (НБК), используется для определения курса тенге.<br/><br/>\
+<em>Помните, что официальные курсы валют и драгоценных металлов могут отличаться от рыночных. \
+Используйте команду <strong class="help-command">/charts️</strong> для получения графиков валют \
+с различных торговых площадок.</em>
+site.help.command.chart=\
+— Показать графики котировок валют и драгоценных металов с различных торговых площадок.<br/><br/>\
+После выполнения команды в чат отправляется сообщение, в котором можно нажать кнопку для получения графика \
+интересующей вас котировки, после чего график тоже будет отправлен в чат. Добавление и удаление графиков производится \
+в файле <a href="//github.com/EXL/DigestService/blob/master/src/main/resources/chart/charts.yaml" \
+title="Файл charts.yaml в репозитории проекта." target="_blank">charts.yaml</a>, который имеет формат YAML.
+site.help.command.start=\
+— Начальная команда, показывающая приветствие и отправляющая пользователя читать справку.
+site.help.command.coffee=\
+— Отправить в текущий чат стикер с большой чашкой кофе.
+site.help.command.game=\
+— Отправить в чат статистику различных игровых серверов.
+site.help.command.game.alt=Команда /game, результат выполнения.
+site.help.command.game.desc=\
+На этих серверах участники чата могут собраться и поиграть в интересующие их мультиплеерные компьютерные игры, \
+провести различные турниры и соревнования.
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
