--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -103,7 +103,7 @@ bot.command.help=\
 /subscribe — Подписаться на различные каналы.\n\
 /help — Эта справка.
 bot.command.help.moder=\
-/greeting — Показывать приветствия от бота.
+/greeting — Показывать приветствия в чате от бота.
 bot.command.help.admin=\
 /hello или /hi — Получить привет от бота.\n\
 /show — Показать список записей дайджеста.\n\
