--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -366,26 +366,30 @@ site.login.button=Вход
 site.login.key=Ключ:
 site.login.error=Неправильные данные пользователя!
 site.help.title=Справка по сервису и командам Telegram-бота
-site.help.title.commands=Команды бота, доступные каждому участнику группы
-site.help.command.digest=\
+site.help.title.commands=Команды, доступные каждому участнику группы
+site.help.title.admin=Команды, доступные администраторам группы
+site.help.title.owner=Команды, доступные администраторам бота
+site.help.title.other=Дополнительная информация
+site.help.command.digest=&bull; <strong class="help-command">/digest</strong> \
 — Показать сообщения с тегом <strong class="help-command">#digest</strong>, которые были собраны в текущем \
 Telegram-чате за неделю или за всё время.
 site.help.command.digest.alt=Команда /digest, результат выполнения.
 site.help.command.digest.desc=\
 Сообщения, добавленные последними, находятся вверху. В верхней части дайджеста имеется небольшая статистика, \
 отображающая общее количество дайджестов в чате, текущую страницу и их количество. \
-Кнопки, преключающие страницы, отображаются лишь тогда, когда было собрано более 10 сообщений.<br/><br/>\
+Кнопки, преключающие страницы, отображаются лишь тогда, когда было собрано более %message% сообщений.<br/><br/>\
 Для текста, который помещается в вывод команды, имеются следующие ограничения:<br/>\
 1. Все переводы строк из сообщения вырезаются.<br/>\
-2. Из упоминаний пользовтелей вырезается символ обращения <strong class="help-command">@</strong>, при этом он сохраняется в самой базе данных.<br/>\
-3. Длина сообщения не может превышать 400 символов.<br/><br/>\
+2. Из упоминаний пользовтелей вырезается символ обращения <strong class="help-command">@</strong>, \
+при этом он сохраняется в самой базе данных.<br/>\
+3. Длина сообщения не может превышать %length% символов.<br/><br/>\
 Эксклюзивные возможности для Telegram-чата MotoFan.Ru:<br/>\
 1. Сообщения хранятся всё время, а не только неделю.<br/>\
 2. Сообщения сразу после их добавления в дайджест публикуются на этот сайт.<br/>\
 3. Стрелочка <strong class="help-command">→️</strong> после текста дайджеста позволяет \
 найти и перейти на данное сообщение в чате. Стелочка активна лишь для дайджестов, добавленных после 28-Mar-2020, \
 это связано с переездом бота на новую платформу.
-site.help.command.rate=\
+site.help.command.rate=&bull; <strong class="help-command">/rate</strong> \
 — Показать актуальные котировки валют и драгоценных металов различных национальных банков.
 site.help.command.rate.alt=Команда /rate, результат выполнения.
 site.help.command.rate.desc=\
@@ -399,24 +403,147 @@ site.help.command.rate.desc=\
 3. Национальный банк Республики Беларусь (НБ РБ), используется для определения курса белорусского рубля.<br/>\
 4. Национальный банк Казахстана (НБК), используется для определения курса тенге.<br/><br/>\
 <em>Помните, что официальные курсы валют и драгоценных металлов могут отличаться от рыночных. \
-Используйте команду <strong class="help-command">/charts️</strong> для получения графиков валют \
+Используйте команду <strong class="help-command">/charts️</strong> для получения графиков \
 с различных торговых площадок.</em>
-site.help.command.chart=\
+site.help.command.chart=&bull; <strong class="help-command">/chart</strong> \
 — Показать графики котировок валют и драгоценных металов с различных торговых площадок.<br/><br/>\
 После выполнения команды в чат отправляется сообщение, в котором можно нажать кнопку для получения графика \
 интересующей вас котировки, после чего график тоже будет отправлен в чат. Добавление и удаление графиков производится \
 в файле <a href="//github.com/EXL/DigestService/blob/master/src/main/resources/chart/charts.yaml" \
 title="Файл charts.yaml в репозитории проекта." target="_blank">charts.yaml</a>, который имеет формат YAML.
-site.help.command.start=\
+site.help.command.start=&bull; <strong class="help-command">/start</strong> \
 — Начальная команда, показывающая приветствие и отправляющая пользователя читать справку.
-site.help.command.coffee=\
+site.help.command.coffee=&bull; <strong class="help-command">/coffee</strong> \
 — Отправить в текущий чат стикер с большой чашкой кофе.
-site.help.command.game=\
+site.help.command.game=&bull; <strong class="help-command">/game</strong> \
 — Отправить в чат статистику различных игровых серверов.
 site.help.command.game.alt=Команда /game, результат выполнения.
 site.help.command.game.desc=\
 На этих серверах участники чата могут собраться и поиграть в интересующие их мультиплеерные компьютерные игры, \
 провести различные турниры и соревнования.
+site.help.command.subscribe=&bull; <strong class="help-command">/subscribe</strong> \
+— Подписаться на различные информационные каналы.
+site.help.command.subscribe.alt=Команда /subscribe, результат выполнения.
+site.help.command.subscribe.desc=\
+Команда позволяет подписывать Telegram-чаты на различные информационные каналы, \
+список которых со временем может изменяться. Администраторы бота могут подписывать различные группы в Telegram, \
+а обычные пользователи только свои собственные диалоги с ботом.<br/><br/>\
+Актуальные источники информации и их особенности:<br/>\
+1. Подписка на сообщения, которые были отправлены участниками Telegram-чата MotoFan.Ru в дайджест, сообщения \
+отправляются сразу, если пользователь сам оставил дайджест, то ему в личный чат сообещение отправлено не будет.<br/>\
+2. Подписка на новые сообщения с форума MotoFan.Ru, проверяются каждые 20 минут и отправляются скопом.<br/>\
+3. Подписка на отчёт по пандемии COVID-2019 в Российской Федерации, отчёт отправляется ежедневно.<br/><br/>\
+Эксклюзивно для Telegram-чата MotoFan.Ru в конференцию отправляется отчёт по пандемии COVID-2019 в Украине. \
+Для различных нужд были подготовлены соответствующие API \
+(<a href="/api/covid/ru" title="Пандемия COVID-2019 в Российской Федерации." target="_blank">Ru</a>, \
+<a href="/api/covid/ua" title="Пандемия COVID-2019 в Украине." target="_blank">Ua</a>), \
+выдающие информацию в формате JSON.
+site.help.command.help=&bull; <strong class="help-command">/help</strong> \
+— Вывести в чат справку по командам бота.<br/><br/>\
+<em>Справка является динамической и отображение команд расчитывается на основе текущих прав юзера в группе и наличия \
+у него администраторских полномочий по управлению ботом.
+site.help.command.greeting=&bull; <strong class="help-command">/greeting</strong> \
+— Настройка приветствий от бота в группе.
+site.help.command.greeting.alt=Команда /greeting, результат выполнения.
+site.help.command.greeting.desc=\
+Администраторы группы могут отключить приветствия бота, которые он отправляет новым участникам конференции или \
+пользователям, которые её покинули. По умолчанию приветствия включены.
+site.help.command.hello=&bull; <strong class="help-command">/hello</strong> \
+или <strong class="help-command">/hi</strong> — Отправить в ответ случайное приветствие бота.
+site.help.command.show=&bull; <strong class="help-command">/show</strong> \
+— Команда позволяет посмотреть все дайджесты во всех группах, сохранённые в базе данных.
+site.help.command.show.alt=Команда /show, результат выполнения.
+site.help.command.show.desc=\
+Аналог команды <strong class="help-command">/digest</strong>, предназначенный для администраторов. \
+Эту команду удобно использовать в связке с командой <strong class="help-command">/delete</strong> для удаления \
+некорректных сообщений.<br/><br/>\
+<em>Команда может отображать некоторые приватные данные, \
+поэтому её использование в публичных чатах не рекомендуется.</em>
+site.help.command.delete=&bull; <strong class="help-command">/delete</strong> \
+<strong class="help-argument">[id]</strong> — Удалить дайджест из базы данных под номером [id].<br><br>\
+Команда используется в связке с командой <strong class="help-command">/show</strong>, в качестве аргумента \
+используется номер ID сообщения из базы данных.
+site.help.command.send=&bull; <strong class="help-command">/send</strong> \
+<strong class="help-argument">[id]</strong> <strong class="help-argument">[сообщение]</strong> \
+— Отправить [сообщение] в чат с номером [id] от имени бота.<br><br>\
+Бот должен находиться в чате и иметь возможность отправки сообщений. \
+Узнать номер [id] чата можно с помощью команды <strong class="help-command">/subscribe</strong>, \
+вызвав её в нужном чате. Переносы строк в отправленном сообщении не вырезаются.
+site.help.command.sticker=&bull; <strong class="help-command">/sticker</strong> \
+<strong class="help-argument">[id]</strong> <strong class="help-argument">[hash]</strong> \
+— Отправить стикер [hash] в чат с номером [id] от имени бота.<br><br>\
+Бот должен находиться в чате и иметь возможность отправки сообщений. \
+Узнать номер [id] чата можно с помощью команды <strong class="help-command">/subscribe</strong>, \
+вызвав её в нужном чате. Узнать [hash] стикера можно с помощью сторонних сервисов, например, бота \
+<a href="//t.me/idstickerbot" title="Специальный бот, отображающий [hash] отправленных ему стикеров." \
+target="_blank">@idstickerbot</a>, просто отправив ему необходимый стикер.
+site.help.command.image=&bull; <strong class="help-command">/image</strong> \
+<strong class="help-argument">[id]</strong> <strong class="help-argument">[ссылка]</strong> \
+— Отправить изображение по [ссылке] в чат с номером [id] от имени бота.<br><br>\
+Бот должен находиться в чате и иметь возможность отправки сообщений. \
+Узнать номер [id] чата можно с помощью команды <strong class="help-command">/subscribe</strong>, \
+вызвав её в нужном чате. Бот скачивает изображение по [ссылке] и отправляет его в чат. \
+Рекомендуется использовать прямые ссылки на изображения.
+site.help.command.debug=&bull; <strong class="help-command">/debug</strong> \
+— Администраторская команда для изменения различных параметров бота и перезапуска различных служб.
+site.help.command.debug.alt=Команда /debug, результат выполнения.
+site.help.command.debug.desc=\
+Команда, выполненная без аргументов показывает справку и текущие настройки бота. С помощью аргументов, \
+которые передаются в команду, можно изменять различные параметры и перезапускать различные службы.<br/><br/>\
+Список актуальных аргументов команды:<br/><div class="help-shift">\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRates</strong> \
+— Обновление котировок валют в базе данных со всех официальных источников.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VPosts</strong> \
+— Незамедлительно получить новые сообщения с форума MotoFan.Ru, \
+если таковые сообщения имеются, они будут отправлены подписчикам.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VShredder</strong> \
+— Очистить базу данных от старых и неактуальных дайджестов (Telegram-чат MotoFan.Ru будет проигнорирован).<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VAvatars</strong> \
+— Обновить аватары пользователей, которые отображаются на этом сайте.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VQueries</strong> \
+— Очистить стек inline-запросов, который служит для ограничения частого нажатия на кнопки.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VCovid</strong> \
+— Получить и отправить отчёты по COVID-2019 во все чаты подписчикам.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
+— Отправить фразу с добрым утром в Telegram-чат MotoFan.Ru, фраза случайная.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
+— Изменение глобальной настройки вывода обновлений в Telegram-чатах в логи на сервере.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BGreetings</strong> \
+— Изменение глобальной настройки приветствий бота на новых и покинувших чат пользователей.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BSilent</strong> \
+— Изменение глобальной настройки вывода любых сообщений бота в чаты.</div>
+site.help.command.info=&bull; <strong class="help-command">/info</strong> \
+— Команда отображает различную системную информацию и нагрузку на систему.<br><br>\
+Для удобства имеется API, представляющее \
+<a href="/api/info" title="Информация об этой системе." target="_blank">системную информацию</a> \
+в обычном текстовом формате.
+site.help.other=\
+Помимо самого бота, сервис имеет несколько служб, которые работают в фоне и занимаются получением \
+дополнительной информации или обслуживанием.<br/><br/>\
+Список работающих сервисов, время представлено по часовому поясу MSK в 24-часовом формате:<br/>\
+&bull; <strong class="help-argument">bot.callbacks.clear</strong> \
+— Сервис очистки inline-стека, очистка происходит в 03:00 каждый день.<br>\
+&bull; <strong class="help-argument">bot.avatars.update</strong> \
+— Сервис обновления аватаров пользователей, обновление происходит в 04:00 каждый день.<br>\
+&bull; <strong class="help-argument">bot.motofan.receiver</strong> \
+— Сервис получения новых сообщений с форума MotoFan.Ru, каждые 20 минут производится проверка на новые сообщения.<br>\
+&bull; <strong class="help-argument">bot.digest.shredder</strong> \
+— Сервис очистки неактуальных дайджестов, очистка происходит в 05:00 по понедельникам.<br>\
+&bull; <strong class="help-argument">bot.covid.report</strong> \
+— Сервис получения и отправки отчётов по пандемии COVID-2019, \
+получение и отправка отчётов происходит в 15:00 каждый день.<br>\
+&bull; <strong class="help-argument">bot.morning.send</strong> \
+— Сервис отправки случайной фразы с добрым утром, отправка происходит в 07:00 каждый день.<br>\
+&bull; <strong class="help-argument">exchange.rates.update</strong> \
+— Сервис получения и обновления котировок валют со всех официальных источников, \
+получение и обновление котировок происходит в 13:00 каждый день.<br/><br/>\
+<strong>Дополнительная функциональность, связанная с редактированием таблиц базы данных доступна из \
+администраторского модуля.</strong>
+site.help.other.admin=Текущие администраторы бота: %admin%.
+site.help.up=Вверх ↑
+site.help.up.title=Перейти наверх.
+site.help.down=Вниз ↓
+site.help.down.title=Перейти вниз.
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
