--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -31,20 +31,20 @@ bot.error.hostip=Неизвестный\n\nОшибка получения IP-а
 bot.error.game=Не могу получить игровую статистику, ошибка:\n```\n%s\n```
 bot.error.chart=Не могу получить изображение графика, ошибка:\n```\n%s\n```
 bot.error.sticker.format=\
-Неправильный формат комманды, используйте:\n\
+Неправильный формат команды, используйте:\n\
 `/sticker <chat id> <sticker id>`.
 bot.error.send.format=\
-Неправильный формат комманды, используйте:\n\
+Неправильный формат команды, используйте:\n\
 `/send <chat id> <message>`.
 bot.error.image.format=\
-Неправильный формат комманды, используйте:\n\
+Неправильный формат команды, используйте:\n\
 `/image <chat id> <image url>`.
 bot.error.chatid=Неправильный номер `id` чата: `%s`.
 bot.error.database=Ошибка базы данных:\n```\n%s\n```
 bot.error.database.html=Ошибка базы данных:\n<pre>\n%s\n</pre>
 bot.error.show.empty=Ошибка: нет подходящих записей в базе данных.
 bot.error.delete.format=\
-Неправильный формат комманды, используйте:\n\
+Неправильный формат команды, используйте:\n\
 `/delete <id>`.
 bot.error.delete.entry=\
 Невозможно удалить запись id `%d` из базы данных.\n\
@@ -204,7 +204,7 @@ bot.morning=\
 Ну что же вы всё ещё спите, засони?! А ну вставайте быстрее! ☕\n\
 А вы уже заварили себе ароматный кофе? ☕\n\
 Какое прекрасное солнечное утро! ☕\n\
-Бррр… Что за ужасная бессоная ночка… 😞 ☕\n\
+Бррр… Что за ужасная бессонная ночка… 😞 ☕\n\
 Доброго утра! ☕
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
