Add english version of help page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -222,8 +222,8 @@ Links: \
 <a href="/help" title="Digest Service and Bot Commands Cheat Sheet.">Help</a>, \
 <a href="/api/info" title="Information about this system.">System</a>, \
 <a href="/api/rate" title="Exchange rate values.">Rates</a>, \
-COVID-2019: <a href="/api/covid/ru" title="COVID-2019 pandemic report in Russian Federation.">Ru</a>, \
-<a href="/api/covid/ua" title="COVID-2019 pandemic report in Ukraine.">Ua</a>.
+COVID-2019: <a href="/api/covid/ru" title="COVID-2019 pandemic in Russian Federation.">Ru</a>, \
+<a href="/api/covid/ua" title="COVID-2019 pandemic in Ukraine.">Ua</a>.
 site.footer.source=\
 Source code: \
 <a href="//github.com/EXL/DigestService" target="_blank" title="Digest Service GitHub repository.">Digest Service</a>.
@@ -283,7 +283,7 @@ site.search.find.placeholder=Enter text…
 site.search.filter.label=Filter:
 site.search.filter.placeholder=User #…
 site.search.reset=Reset
-site.error.title=Sorry, something went wrong...
+site.error.title=Sorry, something went wrong…
 site.error.timestamp=Timestamp:
 site.error.status=Status:
 site.error.message=Message:
@@ -366,7 +366,194 @@ site.login.button=Login
 site.login.key=Key:
 site.login.error=Incorrect user data!
 site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
-site.help.title.commands=Lorem ipsulum
+site.help.title.commands=Available Commands for Group Members
+site.help.title.admin=Available Commands for Group Admins
+site.help.title.owner=Available Commands for Bot Admins
+site.help.title.other=Additional information
+site.help.title.about=About the service…
+site.help.about=<strong class="help-command">Digest Service</strong> is a Telegram bot for group chats \
+combined with this website. The main functionality of the service is to \
+collect messages with the <strong class="help-command">#digest</strong> tag in Telegram chats and display them \
+using the <strong class="help-command">/digest</strong> command. In addition, the bot has other features e.g. \
+it can subscribe users to various information channels and show various quotes of currencies and \
+precious metals.
+site.help.command.digest=&bull; <strong class="help-command">/digest</strong> \
+— Show messages with the <strong class="help-command">#digest</strong> tag that were collected in the current \
+Telegram chat for a week or for all time.
+site.help.command.digest.alt=The result of the /digest command.
+site.help.command.digest.desc=\
+The most recent posts are at the top. There is a small statistic in digest header which displays the total \
+number of digests in the chat, the current page and total pages count. \
+Buttons for switching pages are displayed only when more than %message% messages have been collected.<br/><br/>\
+There are the following restrictions for text that is placed in the output of the command:<br/>\
+1. All line breaks will be cut out from the message.<br/>\
+2. The <strong class="help-command">@</strong> symbol will be cut out from the references of users \
+but stored in the database itself.<br/>\
+3. The length of the message to be added can't exceed %length% characters.<br/><br/>\
+Exclusive features for MotoFan.Ru Telegram chat:<br/>\
+1. Messages are stored all the time, not just a week.<br/>\
+2. Messages are published on this website when they are added to the digest immediately.<br/>\
+3. The <strong class="help-command">→️</strong> symbol after the digest text allows you \
+to find this message in the chat and go to it. The arrow symbol is only active for digests added after 28-Mar-2020, \
+due to the bot moving to a new platform.
+site.help.command.rate=&bull; <strong class="help-command">/rate</strong> \
+— Show current quotes of currencies and precious metals of various national banks.
+site.help.command.rate.alt=The result of the /rate command.
+site.help.command.rate.desc=\
+Quotes are updated daily and the difference is calculated based on the previous values. \
+There is \
+<a href="/api/rate" title="Exchange rate values." target="_blank">a special API</a> \
+that displays rates in a convenient JSON format.<br/><br/>\
+The following national banks are used as official sources:<br/>\
+1. The Bank of Russia (CBR) is used to determine the exchange rates of the Russian ruble and precious metals.<br/>\
+2. The National Bank of Ukraine (NBU) is used to determine the hryvnia exchange rate.<br/>\
+3. The National Bank of the Republic of Belarus (NB RB) is used to determine the Belarusian ruble exchange rate.<br/>\
+4. The National Bank of Kazakhstan (NBK) is used to determine the tenge exchange rate.<br/><br/>\
+<em>Please note that official exchange rates and precious metals may differ from market rates. \
+Please use the <strong class="help-command">/charts️</strong> command to get charts \
+from various tradings.</em>
+site.help.command.chart=&bull; <strong class="help-command">/chart</strong> \
+— Show currencies and precious metals charts of various tradings.<br/><br/>\
+A message with the chart buttons will be sent to the chat after the command is executed. You can click the button you \
+need to get a chart of exchanges you are interested in. The chart will be sent to the chat after that. You can add or \
+remove a chart source in the <a href="//github.com/EXL/DigestService/blob/master/src/main/resources/chart/charts.yaml" \
+title="File charts.yaml in project repository." target="_blank">charts.yaml</a> file which has the YAML format.
+site.help.command.start=&bull; <strong class="help-command">/start</strong> \
+— An initial command that displays a greeting and sends the user to read the commands help.
+site.help.command.coffee=&bull; <strong class="help-command">/coffee</strong> \
+— Send a sticker with a large cup of coffee to the current chat.
+site.help.command.game=&bull; <strong class="help-command">/game</strong> \
+— Send statistics of various game servers to the current chat.
+site.help.command.game.alt=The result of the /game command.
+site.help.command.game.desc=\
+Chat participants can play the multiplayer computer games on these servers, \
+hold various tournaments and competitions also.
+site.help.command.subscribe=&bull; <strong class="help-command">/subscribe</strong> \
+— Subscribe to various information channels.
+site.help.command.subscribe.alt=The result of the /subscribe command.
+site.help.command.subscribe.desc=\
+This command allows you subscribe Telegram chats to various information channels \
+which may change over time. Bot administrators can subscribe various groups in Telegram \
+but ordinary Telegram users can only subscribe their own dialogs with the bot.<br/><br/>\
+Actual information sources and features:<br/>\
+1. Subscription to messages that were sent to the digest by MotoFan.Ru Telegram chat participants. \
+Messages are sent immediately but if the user himself wrote a digest then a message will not be sent \
+to him in a chat with the bot.<br/>\
+2. Subscription to new posts from the MotoFan.Ru forum, which all are sent every 20 minutes.<br/>\
+3. Subscription to the COVID-2019 pandemic report in the Russian Federation, the report is sent daily.<br/><br/>\
+The COVID-2019 pandemic report in the Ukraine is sent exclusively to the MotoFan.Ru Telegram chat. \
+There are corresponding COVID-2019 API \
+(<a href="/api/covid/ru" title="COVID-2019 pandemic in Russian Federation." target="_blank">Ru</a>, \
+<a href="/api/covid/ua" title="COVID-2019 pandemic in Ukraine." target="_blank">Ua</a>), \
+that output information in JSON format.
+site.help.command.help=&bull; <strong class="help-command">/help</strong> \
+— Display bot commands help in the current chat.<br/><br/>\
+<em>The help is dynamic and the display of commands is built based on the current rights of the user in the group and \
+the availability of administrator privileges to manage the bot.</em>
+site.help.command.greeting=&bull; <strong class="help-command">/greeting</strong> \
+— Setting up greetings from a bot in a group.
+site.help.command.greeting.alt=The result of the /greeting command.
+site.help.command.greeting.desc=\
+Group administrators can disable bot greetings that sends to new conference participants or \
+users who left chat. Greetings are enabled by default. This option is useful if you already have a bot \
+in your group that meets users.
+site.help.command.hello=&bull; <strong class="help-command">/hello</strong> \
+or <strong class="help-command">/hi</strong> — Send a random bot greeting in response.
+site.help.command.show=&bull; <strong class="help-command">/show</strong> \
+— Display all digests from all groups which are stored in the database.
+site.help.command.show.alt=The result of the /show command.
+site.help.command.show.desc=\
+An analogue of the <strong class="help-command">/digest</strong> command for bot administrators. \
+This command is conveniently used in conjunction with the <strong class="help-command">/delete</strong> command \
+to delete invalid messages from database.<br/><br/>\
+<em>The command can display some private data \
+so its use in public chats is not recommended.</em>
+site.help.command.delete=&bull; <strong class="help-command">/delete</strong> \
+<strong class="help-argument">[id]</strong> — Delete digest from database with [id] number.<br/><br/>\
+The command is used in conjunction with the <strong class="help-command">/show</strong> command. \
+The message [id] number from the database is used as argument.
+site.help.command.send=&bull; <strong class="help-command">/send</strong> \
+<strong class="help-argument">[id]</strong> <strong class="help-argument">[message]</strong> \
+— Send the [message] to the chat with [id] number on behalf of the bot.<br/><br/>\
+The bot must be in the chat and be able to send messages. \
+You can find out the chat [id] number using the <strong class="help-command">/subscribe</strong> command \
+by executing it in the required chat in advance. Line breaks in the sent message will not be cut.
+site.help.command.sticker=&bull; <strong class="help-command">/sticker</strong> \
+<strong class="help-argument">[id]</strong> <strong class="help-argument">[hash]</strong> \
+— Send the sticker with [hash] to the chat with [id] number on behalf of the bot.<br/><br/>\
+The bot must be in the chat and be able to send messages. \
+You can find out the chat [id] number using the <strong class="help-command">/subscribe</strong> command \
+by executing it in the required chat in advance. You can determine the [hash] of sticker using third-party services \
+e.g. through a <a href="//t.me/idstickerbot" title="A special bot that displays [hash] of stickers sent to it." \
+target="_blank">@idstickerbot</a> bot by sending the necessary sticker to it.
+site.help.command.image=&bull; <strong class="help-command">/image</strong> \
+<strong class="help-argument">[id]</strong> <strong class="help-argument">[link]</strong> \
+— Send the image from [link] to the chat with [id] number on behalf of the bot.<br/><br/>\
+The bot must be in the chat and be able to send messages. \
+You can find out the chat [id] number using the <strong class="help-command">/subscribe</strong> command \
+by executing it in the required chat in advance. The bot downloads the image from the [link] and sends it to the chat. \
+Direct links to images are strongly recommended.
+site.help.command.debug=&bull; <strong class="help-command">/debug</strong> \
+— The admin command to change various bot settings and managing various services.
+site.help.command.debug.alt=The result of the /debug command.
+site.help.command.debug.desc=\
+The command executed without arguments displays help and current bot settings. You can change various bot \
+parameters and manage various services with using the arguments that are passed to this command.<br/><br/>\
+List of actual command arguments:<br/><div class="help-shift">\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRates</strong> \
+— Update exchange rates in the database from the all official sources.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VPosts</strong> \
+— Receive new posts from the MotoFan.Ru forum immediately \
+and send them to subscribers, if any.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VShredder</strong> \
+— Drop old and irrelevant digests from database (MotoFan.Ru Telegram chat will be ignored).<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VAvatars</strong> \
+— Update user avatars that are displayed on this website.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VQueries</strong> \
+— Clear the inline request stack which is used to limit clicking on the bot buttons.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VCovid</strong> \
+— Receive and send COVID-2019 reports to all subscribers chats.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
+— Send the random good morning phrase to the MotoFan.Ru Telegram chat.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
+— Change the global settings of outputting Telegram chats updates to the server logs.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BGreetings</strong> \
+— Change the global settings of bot greetings for new and left chat users.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BSilent</strong> \
+— Change the global settings of outputting any bot messages to any Telegram chats.</div>
+site.help.command.info=&bull; <strong class="help-command">/info</strong> \
+— The command displays various system information and average system load.<br/><br/>\
+There is a special API that displays \
+<a href="/api/info" title="Information about this system." target="_blank">system information</a> \
+in plain text format.
+site.help.other=\
+In addition to the Telegram bot itself, the <strong class="help-command">Digest Service</strong> has several services \
+that work in the background and are engaged in obtaining additional information or maintenance.<br/><br/>\
+List of working services (time is presented by in 24-hour format and MSK time zone):<br/>\
+&bull; <strong class="help-argument">bot.callbacks.clear</strong> \
+— Inline-stack cleaning service, cleaning occurs at 03:00 every day.<br/>\
+&bull; <strong class="help-argument">bot.avatars.update</strong> \
+— User avatars update service, update occurs at 04:00 every day.<br/>\
+&bull; <strong class="help-argument">bot.motofan.receiver</strong> \
+— Service for receiving new posts from the MotoFan.Ru forum, check for new messages is performed every 20 minutes.<br/>\
+&bull; <strong class="help-argument">bot.digest.shredder</strong> \
+— Irrelevant digests cleaning service, cleaning occurs at 05:00 on Mondays.<br/>\
+&bull; <strong class="help-argument">bot.covid.report</strong> \
+— Service for receiving and sending COVID-2019 pandemic reports, \
+receiving and sending reports occurs at 15:00 every day.<br/>\
+&bull; <strong class="help-argument">bot.morning.send</strong> \
+— Good morning random phrase sending service, \
+phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
+&bull; <strong class="help-argument">exchange.rates.update</strong> \
+— Service for receiving and updating exchange rates from the all official sources, \
+receiving and updating rates occurs at 13:00 every day.<br/><br/>\
+<strong>Additional functionality related to editing database tables is available from the \
+administrator module.</strong>
+site.help.other.admin=Current bot administrators: %admin%.
+site.help.up=Top ↑
+site.help.up.title=Go up the page.
+site.help.down=Bottom ↓
+site.help.down.title=Go down the page.
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Cases: %s
