Add table of contents

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -366,6 +366,7 @@ site.login.button=Login
 site.login.key=Key:
 site.login.error=Incorrect user data!
 site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
+site.help.title.content=Table of Contents
 site.help.title.commands=Available Commands for Group Members
 site.help.title.admin=Available Commands for Group Admins
 site.help.title.owner=Available Commands for Bot Admins
@@ -548,12 +549,13 @@ phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 — Service for receiving and updating exchange rates from the all official sources, \
 receiving and updating rates occurs at 13:00 every day.<br/><br/>\
 <strong>Additional functionality related to editing database tables is available from the \
-administrator module.</strong>
+administration module.</strong>
 site.help.other.admin=Current bot administrators: %admin%.
 site.help.up=Top ↑
 site.help.up.title=Go up the page.
 site.help.down=Bottom ↓
 site.help.down.title=Go down the page.
+site.help.back=← Back to the Table of Contents
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Cases: %s
