--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -366,6 +366,7 @@ site.login.button=Вход
 site.login.key=Ключ:
 site.login.error=Неправильные данные пользователя!
 site.help.title=Справка по сервису и командам Telegram-бота
+site.help.title.content=Содержание
 site.help.title.commands=Команды, доступные каждому участнику группы
 site.help.title.admin=Команды, доступные администраторам группы
 site.help.title.owner=Команды, доступные администраторам бота
@@ -554,6 +555,7 @@ site.help.up=Вверх ↑
 site.help.up.title=Перейти наверх.
 site.help.down=Вниз ↓
 site.help.down.title=Перейти вниз.
+site.help.back=← Перейти к содержанию
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
