Fix some typos in english translations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -172,8 +172,8 @@ bot.command.digest.empty=\
 Unfortunately, there is nothing. Sorry me, %username%.\n\
 Someone again forgot to fill out #digest! %username%, scold them.\n\
 Well, who forgot to fill out the digest? Is it you, %username%?!\n\
-Ohh! %username% did not fill out the digest. What a shame!\n\
-All night obscene pictures were posted in the chat, but they did not fill out the digest. Ohh!\n\
+Oh! %username% did not fill out the digest. What a shame!\n\
+All night obscene pictures were posted in the chat, but they did not fill out the digest. Oh!\n\
 Again, everyone forgot about the digest. Nothing here 😓
 bot.command.digest.marker=•
 bot.command.digest.marker.new=🆕
@@ -196,7 +196,7 @@ bot.hashtag.digest.error.empty=Cannot add a blank message to the digest.
 bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
 bot.hashtag.digest.subscribe.wrote=wrote
 bot.hashtag.digest.subscribe.read=Read post in the group:\n➡️
-bot.hashtag.digest.subscribe.link=Link to the message️
+bot.hashtag.digest.subscribe.link=Link to the message
 bot.info.digest.stats=Total #digest count is %d, p. %d/%d:
 bot.morning=\
 Good morning guys! ☕️\n\
@@ -359,7 +359,7 @@ site.obey.send.image.url=Image Url
 site.login.title=Authorization
 site.login.head=Login Form
 site.login.username=Username:
-site.login.password=Passoword:
+site.login.password=Password:
 site.login.username.placeholder=Enter username…
 site.login.password.placeholder=Enter password…
 site.login.button=Login
