Improve help page and properties file

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -556,6 +556,7 @@ site.help.up.title=Go up the page.
 site.help.down=Bottom ↓
 site.help.down.title=Go down the page.
 site.help.back=← Back to the Table of Contents
+site.help.back.title=Go to the Table of Contents!
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Cases: %s
