--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -556,6 +556,7 @@ site.help.up.title=Перейти наверх.
 site.help.down=Вниз ↓
 site.help.down.title=Перейти вниз.
 site.help.back=← Перейти к содержанию
+site.help.back.title=К содержанию!
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-2019) 🇷🇺</strong>
 covid.head.cases=Заразилось: %s
