Enable cache for some static files
Fix typo in Russian localization files

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -511,7 +511,7 @@ site.help.command.debug.desc=\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VAvatars</strong> \
 — Обновить аватары пользователей, которые отображаются на этом сайте.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VQueries</strong> \
-— Очистить стек inline-запросов, который служит для ограничения нажатия на кнопки бота.<br/>\
+— Очистить стек inline-запросов, который служит для ограничения нажатий на кнопки бота.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VCovid</strong> \
 — Получить и отправить отчёты по COVID-2019 во все чаты подписчикам.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
