Update translations for ellipsis sign
And drop unused key

--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -6,7 +6,7 @@ covid.head.date=Дані оновлено: %s
 covid.head.home=⚠️ Переконливе прохання залишатися вдома! ⚠️
 covid.increase.new=, динаміка: ↑%s
 covid.table.region=Регіон
-covid.table.cases=Захв.
-covid.table.recover=Одуж.
-covid.table.deaths=Помер.
+covid.table.cases=Захв…
+covid.table.recover=Одуж…
+covid.table.deaths=Помер…
 covid.source=<em>Джерело: <a href="https://covid.2gis.ua/stat">Гео-інформаційний сервіс 2GIS</a>.</em>
