--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -363,7 +363,6 @@ site.login.password=Password:
 site.login.username.placeholder=Enter username…
 site.login.password.placeholder=Enter password…
 site.login.button=Login
-site.login.key=Key:
 site.login.error=Incorrect user data!
 site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
 site.help.title.content=Table of Contents
@@ -568,7 +567,7 @@ covid.increase=↑%s
 covid.increase.new=, new: ↑%s
 covid.table.region=Region
 covid.table.cases=Cases
-covid.table.recover=Recov.
+covid.table.recover=Recov…
 covid.table.deaths=Deaths
 covid.source=<em>Source: <a href="https://covid.2gis.ru/">2GIS Maps</a>.</em>
 covid.error=Cannot get COVID-19 data. Maybe it's a conspiracy! Error:\n<pre>\n%s\n</pre>
