Fix some typos on the help page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -382,8 +382,8 @@ site.help.command.digest=&bull; <strong class="help-command">/digest</strong> \
 Telegram chat for a week or for all time.
 site.help.command.digest.alt=The result of the /digest command.
 site.help.command.digest.desc=\
-The most recent posts are at the top. There is a small statistic in digest header which displays the total \
-number of digests in the chat, the current page and total pages count. \
+The most recent posts are at the top. There is a small statistic in the digest header which displays the total \
+number of digests in the chat, the current page, and the total pages count. \
 Buttons for switching pages are displayed only when more than %message% messages have been collected.<br/><br/>\
 There are the following restrictions for text that is placed in the output of the command:<br/>\
 1. All line breaks will be cut out from the message.<br/>\
@@ -463,15 +463,15 @@ site.help.command.show=&bull; <strong class="help-command">/show</strong> \
 — Display all digests from all groups which are stored in the database.
 site.help.command.show.alt=The result of the /show command.
 site.help.command.show.desc=\
-An analogue of the <strong class="help-command">/digest</strong> command for bot administrators. \
+An analog of the <strong class="help-command">/digest</strong> command for bot administrators. \
 This command is conveniently used in conjunction with the <strong class="help-command">/delete</strong> command \
-to delete invalid messages from database.<br/><br/>\
+to delete invalid messages from the database.<br/><br/>\
 <em>The command can display some private data \
 so its use in public chats is not recommended.</em>
 site.help.command.delete=&bull; <strong class="help-command">/delete</strong> \
 <strong class="help-argument">[id]</strong> — Delete digest from database with [id] number.<br/><br/>\
 The command is used in conjunction with the <strong class="help-command">/show</strong> command. \
-The message [id] number from the database is used as argument.
+The message [id] number from the database is used as an argument.
 site.help.command.send=&bull; <strong class="help-command">/send</strong> \
 <strong class="help-argument">[id]</strong> <strong class="help-argument">[message]</strong> \
 — Send the [message] to the chat with [id] number on behalf of the bot.<br/><br/>\
@@ -501,12 +501,12 @@ The command executed without arguments displays help and current bot settings. Y
 parameters and manage various services with using the arguments that are passed to this command.<br/><br/>\
 List of actual command arguments:<br/><div class="help-shift">\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRates</strong> \
-— Update exchange rates in the database from the all official sources.<br/>\
+— Update exchange rates in the database from all official sources.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VPosts</strong> \
 — Receive new posts from the MotoFan.Ru forum immediately \
 and send them to subscribers, if any.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VShredder</strong> \
-— Drop old and irrelevant digests from database (MotoFan.Ru Telegram chat will be ignored).<br/>\
+— Drop old and irrelevant digests from the database (MotoFan.Ru Telegram chat will be ignored).<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VAvatars</strong> \
 — Update user avatars that are displayed on this website.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VQueries</strong> \
@@ -545,7 +545,7 @@ receiving and sending reports occurs at 15:00 every day.<br/>\
 — Good morning random phrase sending service, \
 phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
-— Service for receiving and updating exchange rates from the all official sources, \
+— Service for receiving and updating exchange rates from all official sources, \
 receiving and updating rates occurs at 13:00 every day.<br/><br/>\
 <strong>Additional functionality related to editing database tables is available from the \
 administration module.</strong>
