--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -575,3 +575,15 @@ covid.error.names=COVID-19 region names map is null or empty!
 covid.error.cases=COVID-19 cases map is null or empty!
 covid.error.hists=COVID-19 history map is null or empty!
 covid.error.long=For other regions, see the link below.
+
+flat.error=Parsing %s data error:\n<pre>\n%s\n</pre>
+flat.error.empty=There are no apartments variants.
+flat.header.cian=CIAN apartments variants:
+flat.header.n1=N1 apartments variants:
+flat.header.date=Query date and time: %s
+flat.price.symbol=r.
+flat.room.postfix=r
+flat.square.postfix=m²
+flat.link.cian=[All CIAN suggestions]
+flat.link.n1=[All N1 suggestions]
+flat.link.icon=➡️
