--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -575,3 +575,15 @@ covid.error.names=Список имён регионов, заражённых C
 covid.error.cases=Список случаев заражения COVID-19 пустой или null!
 covid.error.hists=История заражения COVID-19 пустая или null!
 covid.error.long=Другие регионы смотрите по ссылке ниже.
+
+flat.error=Ошибка обработки данных с %s:\n<pre>\n%s\n</pre>
+flat.error.empty=Нет подходящих вариантов квартир.
+flat.header.cian=Варианты квартир ЦИАН:
+flat.header.n1=Варианты квартир N1:
+flat.header.date=Запрос на: %s
+flat.price.symbol=р.
+flat.room.postfix=к
+flat.square.postfix=м²
+flat.link.cian=[Все варианты на ЦИАН]
+flat.link.n1=[Все варианты на N1]
+flat.link.icon=➡️
