Add /debug VFlat command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,6 +142,7 @@ Please choose `/debug` command with argument:\n\
 /debug VQueries — Clear inline queries map.\n\
 /debug VCovid — Send daily COVID-2019 report.\n\
 /debug VMorning — Send good morning phrase.\n\
+/debug VFlat — Send apartment suggestions.\n\
 /debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
 /debug BSilent — Disable sending all events to chat.
@@ -515,6 +516,8 @@ and send them to subscribers, if any.<br/>\
 — Receive and send COVID-2019 reports to all subscribers chats.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
 — Send the random good morning phrase to the MotoFan.Ru Telegram chat.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VFlat</strong> \
+— Send apartment suggestions to the private chat.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
 — Change the global settings of outputting Telegram chats updates to the server logs.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BGreetings</strong> \
