--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -142,6 +142,7 @@ bot.command.debug.help=\
 /debug VQueries — Очистить стек inline-запросов.\n\
 /debug VCovid — Отправить отчёт по COVID-2019.\n\
 /debug VMorning — Отправить фразу с добрым утром.\n\
+/debug VFlat — Отправить варианты квартир.\n\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
@@ -515,6 +516,8 @@ site.help.command.debug.desc=\
 — Получить и отправить отчёты по COVID-2019 во все чаты подписчикам.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
 — Отправить фразу с добрым утром в Telegram-чат MotoFan.Ru, фраза будет выбрана случайная.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VFlat</strong> \
+— Отправить варианты квартир в личный чат.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
 — Изменение глобальной настройки вывода обновлений в Telegram-чатах в логи на сервере.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BGreetings</strong> \
