Update translations, add flat obey strings

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -357,6 +357,17 @@ site.obey.send.sticker=Стикер
 site.obey.send.sticker.id=ИД Стикера
 site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
+site.obey.flat.title=Настройки предложений квартир
+site.obey.flat.variants=Макс. количество вариантов
+site.obey.flat.variants.number=Номер
+site.obey.flat.url=URL-адрес
+site.obey.flat.cian.api=CIAN API
+site.obey.flat.n1.api=N1 API
+site.obey.flat.cian.view=CIAN View
+site.obey.flat.n1.view=N1 View
+site.obey.flat.send=Отправить варианты предложений
+site.obey.flat.advice=Заметка: пожалуйста используйте URL-адрес с [ и ] скобками вместо кодирования с процентами.
+site.obey.flat.decoding=Найти сервис кодирования/расшифровки URL-адреса
 site.login.title=Авторизация
 site.login.head=Форма входа
 site.login.username=Имя:
