--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -357,6 +357,17 @@ site.obey.send.sticker=Sticker
 site.obey.send.sticker.id=Sticker ID
 site.obey.send.image=Image
 site.obey.send.image.url=Image Url
+site.obey.flat.title=Flat Service settings
+site.obey.flat.variants=Max variants
+site.obey.flat.variants.number=Number
+site.obey.flat.url=URL Link
+site.obey.flat.cian.api=CIAN API
+site.obey.flat.n1.api=N1 API
+site.obey.flat.cian.view=CIAN View
+site.obey.flat.n1.view=N1 View
+site.obey.flat.send=Send apartment variants
+site.obey.flat.advice=Note: please use URL with [ and ] braces instead of percent-encoding.
+site.obey.flat.decoding=Find URL Decoding/Encoding Service
 site.login.title=Authorization
 site.login.head=Login Form
 site.login.username=Username:
