--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -358,7 +358,7 @@ site.obey.send.sticker.id=Sticker ID
 site.obey.send.image=Image
 site.obey.send.image.url=Image Url
 site.obey.flat.title=Flat Service settings
-site.obey.flat.variants=Max variants
+site.obey.flat.variants=Maximum variants
 site.obey.flat.variants.number=Number
 site.obey.flat.url=URL Link
 site.obey.flat.cian.api=CIAN API
