--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -358,7 +358,7 @@ site.obey.send.sticker.id=ИД Стикера
 site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
 site.obey.flat.title=Настройки предложений квартир
-site.obey.flat.variants=Макс. количество вариантов
+site.obey.flat.variants=Максимальное количество вариантов
 site.obey.flat.variants.number=Номер
 site.obey.flat.url=URL-адрес
 site.obey.flat.cian.api=CIAN API
