Add cron string and fix translations

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -142,7 +142,7 @@ bot.command.debug.help=\
 /debug VQueries — Очистить стек inline-запросов.\n\
 /debug VCovid — Отправить отчёт по COVID-2019.\n\
 /debug VMorning — Отправить фразу с добрым утром.\n\
-/debug VFlat — Отправить варианты квартир.\n\
+/debug VFlat — Отправить варианты недвижимости.\n\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
 /debug BSilent — Отключить отправку всех событий в чат.
@@ -357,7 +357,7 @@ site.obey.send.sticker=Стикер
 site.obey.send.sticker.id=ИД Стикера
 site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
-site.obey.flat.title=Настройки предложений квартир
+site.obey.flat.title=Настройки предложений недвижимости
 site.obey.flat.variants=Максимальное количество вариантов
 site.obey.flat.variants.number=Номер
 site.obey.flat.url=URL-адрес
@@ -528,7 +528,7 @@ site.help.command.debug.desc=\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
 — Отправить фразу с добрым утром в Telegram-чат MotoFan.Ru, фраза будет выбрана случайная.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VFlat</strong> \
-— Отправить варианты квартир в личный чат.<br/>\
+— Отправить варианты недвижимости в личный чат.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
 — Изменение глобальной настройки вывода обновлений в Telegram-чатах в логи на сервере.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BGreetings</strong> \
@@ -560,7 +560,10 @@ site.help.other=\
 фраза отправляется в 07:00 каждый день.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Сервис получения и обновления котировок со всех официальных источников, \
-получение и обновление происходит в 13:00 каждый день.<br/><br/>\
+получение и обновление происходит в 13:00 каждый день.<br/>\
+&bull; <strong class="help-argument">flat.report.send</strong> \
+— Сервис получения и отправки отчётов предложений недвижимости, \
+получение и отправка отчётов происходит в 11:00 и 23:00 каждый день.<br/><br/>\
 <strong>Дополнительная функциональность, связанная с редактированием таблиц базы данных доступна из \
 администраторского модуля.</strong>
 site.help.other.admin=Текущие администраторы бота: %admin%.
@@ -591,9 +594,9 @@ covid.error.hists=История заражения COVID-19 пустая или
 covid.error.long=Другие регионы смотрите по ссылке ниже.
 
 flat.error=Ошибка обработки данных с %s:\n<pre>\n%s\n</pre>
-flat.error.empty=Нет подходящих вариантов квартир.
-flat.header.cian=Варианты квартир ЦИАН:
-flat.header.n1=Варианты квартир N1:
+flat.error.empty=Нет подходящих вариантов недвижимости.
+flat.header.cian=Варианты недвижимости ЦИАН:
+flat.header.n1=Варианты недвижимости N1:
 flat.header.date=Запрос на: %s
 flat.price.symbol=р.
 flat.room.postfix=к
