--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -560,7 +560,10 @@ receiving and sending reports occurs at 15:00 every day.<br/>\
 phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Service for receiving and updating exchange rates from all official sources, \
-receiving and updating rates occurs at 13:00 every day.<br/><br/>\
+receiving and updating rates occurs at 13:00 every day.<br/>\
+&bull; <strong class="help-argument">flat.report.send</strong> \
+— Service for receiving and sending apartment suggestion reports \
+receiving and sending reports occurs at 11:00 and 23:00 every day.<br/><br/>\
 <strong>Additional functionality related to editing database tables is available from the \
 administration module.</strong>
 site.help.other.admin=Current bot administrators: %admin%.
