Fix COVID-2019 digit limits on report
Fix translations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -584,8 +584,8 @@ covid.increase=↑%s
 covid.increase.new=, new: ↑%s
 covid.table.region=Region
 covid.table.cases=Cases
-covid.table.recover=Recov…
-covid.table.deaths=Deaths
+covid.table.recover=Recovered
+covid.table.deaths=Died
 covid.source=<em>Source: <a href="https://covid.2gis.ru/">2GIS Maps</a>.</em>
 covid.error=Cannot get COVID-19 data. Maybe it's a conspiracy! Error:\n<pre>\n%s\n</pre>
 covid.error.names=COVID-19 region names map is null or empty!
