Add subscribers ids field to frontend

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -358,8 +358,10 @@ site.obey.send.sticker.id=ИД Стикера
 site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
 site.obey.flat.title=Настройки предложений недвижимости
-site.obey.flat.variants=Максимальное количество вариантов
+site.obey.flat.variants=Максимальное количество вариантов:
 site.obey.flat.variants.number=Номер
+site.obey.flat.subscribers=ИД подписчиков:
+site.obey.flat.subscribers.comma=Через запятую, без пробелов
 site.obey.flat.url=URL-адрес
 site.obey.flat.cian.api=CIAN API
 site.obey.flat.n1.api=N1 API
