--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -358,7 +358,7 @@ site.obey.send.sticker.id=ИД Стикера
 site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
 site.obey.flat.title=Настройки предложений недвижимости
-site.obey.flat.variants=Максимальное количество вариантов:
+site.obey.flat.variants=Лимит по количеству вариантов:
 site.obey.flat.variants.number=Номер
 site.obey.flat.subscribers=ИД подписчиков:
 site.obey.flat.subscribers.comma=Через запятую, без пробелов
